--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,11 @@ h3 {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
     background: rgba(73, 73, 73, 0.5); }
-
+  h2.mm-heading{
+    margin-bottom: 2rem;
+    margin-right: 2rem;
+    padding: 0.2rem 1rem;
+    background: rgba(73, 73, 73, 0.5);}
 a {
   color: #fff;
   text-decoration: none; }
