--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ body {
   line-height: 1.5; }
   body#bg-img {
     background: url(../img/bg2.jpeg);
-    background: rgba(68, 68, 68, 0.9), url(../img/background.jpg);
+    background: rgba(68, 68, 68, 0.9), url(../img/bg2.jpg);
     background-attachment: fixed;
     background-size: cover; } 
 
