--- a/css/main.css
+++ b/css/main.css
@@ -103,8 +103,8 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5; }
   body#bg-img {
-    background: url(../img/bg2.jpeg);
-    background: rgba(68, 68, 68, 0.9), url(../img/bg2.jpg);
+    background: url(../img/background.jpeg);
+    background: rgba(68, 68, 68, 0.9), url(../img/background.jpg);
     background-attachment: fixed;
     background-size: cover; } 
 
