--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5; }
   body#bg-img {
-    background: url(../img/bg2.jpeg);
+    background: url(../img/background.jpg);
     background-attachment: fixed;
     background-size: cover; } 
 
